--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi y'all - I am Steve</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Incline Village, NV</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>waterskiing, snowskiing, wakeboarding, snowboarding</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Army Special Forces</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Incline Village, NV</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Get the ladies, of course!</p>
     </section>
 
     <footer id="footer">
